Grinder 3.0-beta5
-----------------

  Expose script and document API to allow scripts to work with custom
  statistics.

  Rationalise the plugin API so that PluginProcessContext and
  PluginThreadContext no longer extend Logger and FilenameFactory.

  Add JMS examples.


Grinder 3.0-beta4
-----------------

  Correct implementation to read grinder.consolePort rather than
  grinder.console.consolePort. Thanks to Dave Tauzell for the report.

  Replace mandatory properties with reasonable defaults.

  Fix HTTPPlugin static initialisation order so that script settings
  are not overridden by default initialisation. Thanks to Mark Wilson
  and Brett Schmoll for reports.

  Script API to provide access to The Grinder build version -
  net.grinder.common.GrinderBuild.

  Script API to provide access to the HTTPClient connection context
  for a thread -
  net.grinder.plugin.http.HTTPPluginControl.getHTTPClientContext().

  Script API to provide access to grinder.properties values -
  net.grinder.script.ScriptContext.getProperties(). Thanks to Dave
  Tauzell for feature request 672691.


Grinder 3.0-beta3
-----------------

  Fix bug in wrapping code that broke the hello-world examples. Thanks
  to Simon Cousins for finding this.


Grinder 3.0-beta2
-----------------

  Improved exception handling and logging. Any exception thrown by a
  wrapped test is recorded as an "error", if the script doesn't
  catch the exception the run is aborted.

  Jython instances can now be Test.wrap()'d.

  First cut of HTTPPlugin TCPProxy filter.

  HTTPRequest API now has overloaded GET and HEAD methods that take a
  query string NVPair[].


Grinder 3.0-beta1
-----------------

   Fix bug 608392 - console data file field separator conflicts with
   localised decimal points. Fields are now tab separated. Thanks to
   Martin Vilcans for the report.

   Fix bug 631144 - worker processes sometimes fail to launch on real
   operating systems. Thanks to Martin Voss for the report.

