@@ -1,0 +1,72 @@
+// Copyright (C) 2003 Philip Aston
+// All rights reserved.
+//
+// This file is part of The Grinder software distribution. Refer to
+// the file LICENSE which is part of The Grinder distribution for
+// licensing details. The Grinder distribution is available on the
+// Internet at http://grinder.sourceforge.net/
+//
+// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
+// FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
+// REGENTS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
+// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+// (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+// HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
+// STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+// ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
+// OF THE POSSIBILITY OF SUCH DAMAGE.
+
+package net.grinder.engine.agent;
+
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.Set;
+
+
+/**
+ * Manages list of child processes and cleans up when we exit. Thanks
+ * to ANT source for inspiration.
+ *
+ * @author Philip Aston
+ * @version $Revision$
+ * @see net.grinder.engine.agent.LauncherThread
+ */
+class ProcessReaper extends Thread {
+
+  private static ProcessReaper s_instance;
+
+  static  {
+    s_instance = new ProcessReaper();
+    Runtime.getRuntime().addShutdownHook(s_instance);
+  }
+
+  public static final ProcessReaper getInstance() {
+    return s_instance;
+  }
+
+  private Set m_processes = new HashSet();
+
+  private ProcessReaper() {
+    super("The Grim Reaper");
+  }
+
+  public final synchronized  boolean add(Process process) {
+    return m_processes.add(process);
+  }
+
+  public final synchronized boolean remove(Process process) {
+    return m_processes.remove(process);
+  }
+
+  public final synchronized void run() {
+    final Iterator iterator = m_processes.iterator();
+
+    while (iterator.hasNext()) {
+      final Process process = (Process)iterator.next();
+      process.destroy();
+    }
+  }
+}
